mini fix: button and text are kind of invisible

--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -1,4 +1,5 @@
 :root {
+    --color-bg-for-the-light-button: #fff;
   --color-bg: #f6f8fa;
   --color-bg-alt: #fff;
   --color-text: #151b23;
@@ -11,6 +12,7 @@
 }
 
 [data-theme="dark"] {
+  --color-bg-for-the-light-button: #201e1e;
   --color-bg: #14151a;
   --color-bg-alt: #181a21;
   --color-text: #e5e7eb;
@@ -139,7 +141,7 @@ nav.desktop-nav {
   background: var(--color-btn-hover);
 }
 .btn-color-2 {
-  background: #e4e7f5;
+  --color-bg-for-the-light-button: #fff;
   color: var(--color-title);
   border: 1px solid var(--color-title);
 }
@@ -403,6 +405,11 @@ section {
   color: #00c8d6;
   filter: drop-shadow(0 0 8px #00eaff);
   transform: scale(1.18) rotate(-6deg);
+}
+
+.tech-icon-btn:focus-visible {
+  outline: none !important;
+  background: none !important;
 }
 .quick-stats {
   display: flex;
